releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.07
=====================
[1675716] <ESC> to close application now works
[1673028] Merge operation now fixed
[1673028] Similar problem in Compare operation fixed

New Features for 3.07
========================
-


Changes to Existing Features in 3.07
====================================
-


Bugs fixed in 3.06.01
=====================
[1660721] Autotype menu & shortcut no longer disabled if field is empty.
[TODO] - Update online help with appendix describing
dbase/cfg/registry preference logic (or lack of thereof).
[TODO] - Add '-c config file path' command line option?

New Features for 3.06.01
========================
[] - Password expiration notice can now be given a few days prior to
actual expiration
[] - Exported/imported text format is now documented in online help

New Features for 3.06
=====================
Support for U3 (disk-on-key).

Changes to Existing Features in 3.06
====================================
[] Opening dialog now shows recently opened databases in dropdown list.
[] File opened in initial dialog now added to recent files list.
[1634251] Password expiration date can now be specified relatively,
e.g., "45 days from now".
[] All dates and times are now displayed in the local format.

Bugs fixed in 3.06
==================
[1625557] No longer crashes when invoking help after using Hot-Key.
[1633516] No longer crashes upon Find with an empty group.
[] Configuration handled correctly with non-English user or host
names.
[] No longer crashes when password history policy changes records.
[] Non-English data issues resolved.

New Features for 3.05.02
========================
None.

Changes to Existing Features in 3.05.02
=======================================
File opened in initial dialog now added to recent files list.

Bugs fixed in 3.05.02
=====================
[1606265, 1609291] No longer terminates after edit when username
and/or hostname starts with a digit.